# vws-python-mock

./: .coveragerc  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pydocstyle  .travis.yml  CHANGELOG.rst  CONTRIBUTING.rst  MANIFEST.in  Makefile  README.rst  conftest.py  dev-requirements.txt  doc8.ini  docker-bake.hcl  lint.mk  mypy.ini  mypy_plugin.py  pyproject.toml  readthedocs.yaml  requirements.txt  secrets.tar.enc  secrets.tar.gpg  setup.cfg  setup.py  spelling_private_dict.txt  vuforia_secrets.env.example  zizmor.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  coverage.yml  dependabot-merge.yml  docker-build.yml  lint.yml  release.yml  skip-tests.yml  test.yml  windows-ci.yml
admin/: add_inactive_vumark_secrets.py  create_secrets_files.py  release.py  release.sh
ci/: __init__.py  custom_linters.py  decrypt_secret.sh  run_script.py  set_secrets_file.py  test_custom_linters.py
docs/source/: api-reference.rst  basic-example.rst  ci-setup.rst  conf.py  contributing.rst  differences-to-vws.rst  docker.rst  getting-started.rst  httpx-example.rst  index.rst  installation.rst  mock-api-reference.rst  release-process.rst  versioning-and-api-stability.rst
newsfragments/: 2114.change  3192.change  3193.change  3194.change  3197.change
requirements/: dev-requirements.txt  docker-requirements.txt  requirements.txt  setup-requirements.txt
src/_mock_vws_server/storage/: __init__.py
src/_mock_vws_server/vwq/: __init__.py
src/_mock_vws_server/vwq/_query_validators/: __init__.py  auth_validators.py  content_length_validators.py  date_validators.py  image_validators.py
src/_mock_vws_server/vws/: __init__.py  _constants.py  _databases.py
src/_mock_vws_server/vws/_services_validators/: __init__.py  auth_validators.py  content_length_validators.py  content_type_validators.py  date_validators.py  image_validators.py
src/_mock_vws_server/vws/resources/: oops_error_occurred_response.html
src/mock_vws/: __init__.py  _authorization.py  _base64_decoding.py  _brisque.py  _cgi.py  _constants.py  _database.py  _database_matchers.py  _decorators.py  _mock_common.py  _mock_web_query_api.py  _mock_web_services_api.py  _model_target_web_api.py  _query_tools.py  _query_validators.py  _services_validators.py  _target.py  _validators.py  _version.py  _vumark_generators.py  database.py  database_type.py  image_matchers.py  model_target.py  query_matchers.py  representations.py  states.py  target.py  target_manager.py  target_raters.py  target_type.py
src/mock_vws/_flask_server/: Dockerfile  __init__.py  healthcheck.py  storage.py  target_manager.py  vwq.py  vws.py
src/mock_vws/_flask_server/dockerfiles/base/: Dockerfile
src/mock_vws/_flask_server/dockerfiles/storage/: Dockerfile
src/mock_vws/_flask_server/dockerfiles/target_manager/: Dockerfile
src/mock_vws/_flask_server/dockerfiles/task_manager/: Dockerfile
src/mock_vws/_flask_server/dockerfiles/vwq/: Dockerfile
src/mock_vws/_flask_server/dockerfiles/vws/: Dockerfile
src/mock_vws/_flask_server/storage/: __init__.py
src/mock_vws/_flask_server/vwq/: __init__.py  _constants.py  _database_matchers.py
src/mock_vws/_flask_server/vws/: __init__.py  _constants.py  _databases.py
src/mock_vws/_query_validators/: __init__.py  accept_header_validators.py  auth_validators.py  content_length_validators.py  content_type_validators.py  date_validators.py  exceptions.py  fields_validators.py  image_validators.py  include_target_data_validators.py  num_results_validators.py  project_state_validators.py
src/mock_vws/_query_validators/resources/: query_out_of_bounds_response.html
src/mock_vws/_requests_mock_server/: __init__.py  decorators.py  mock_web_query_api.py  mock_web_services_api.py
src/mock_vws/_respx_mock_server/: __init__.py  decorators.py
src/mock_vws/_services_validators/: __init__.py  active_flag_validators.py  auth_validators.py  content_length_validators.py  content_type_validators.py  date_validators.py  exceptions.py  image_validators.py  json_validators.py  key_validators.py  metadata_validators.py  name_validators.py  project_state_validators.py  target_validators.py  width_validators.py
src/mock_vws/_vumark_validators/: __init__.py
src/mock_vws/resources/: deleted_target_matched_response.html  match_processing_response.html  oops_error_occurred_response.html
strict_kwargs_stress/: __init__.py  main.py  pyproject.toml
strict_kwargs_stress/pkg/: __init__.py  lib.py
tests/: conftest.py
tests/mock_vws/: __init__.py  jetty_error_array_out_of_bounds.html  jetty_error_array_out_of_bounds_2.html  jetty_error_array_out_of_bounds_3.html  jetty_error_deletion_not_complete.html  jetty_error_deletion_not_complete_2.html  test_504.py  test_add_target.py  test_authorization_header.py  test_content_length.py  test_database_summary.py  test_date_header.py  test_delete_target.py  test_docker.py  test_flask_app_usage.py  test_get_duplicates.py  test_get_target.py  test_invalid_given_id.py  test_invalid_json.py  test_large_header.py  test_model_target_web_api.py  test_query.py  test_requests_mock_usage.py  test_respx_mock_usage.py  test_target_list.py  test_target_raters.py  test_target_summary.py  test_target_validators.py  test_unexpected_json.py  test_update_target.py  test_usage.py  test_vumark_generation.py  test_vumark_generation_api.py
tests/mock_vws/fixtures/: credentials.py  images.py  prepared_requests.py  vuforia_backends.py
tests/mock_vws/utils/: __init__.py  assertions.py  authorization.py  retries.py  too_many_requests.py  usage_test_helpers.py
