[tool.pylint]

    [tool.pylint.'MASTER']

    # Pickle collected data for later comparisons.
    persistent = true

    # Use multiple processes to speed up Pylint.
    jobs = 0

    # List of plugins (as comma separated values of python modules names) to load,
    # usually to register additional checkers.
    load-plugins = [
		'pylint.extensions.docparams',
		'pylint.extensions.no_self_use',
	]

    # Allow loading of arbitrary C extensions. Extensions are imported into the
    # active Python interpreter and may run arbitrary code.
    unsafe-load-any-extension = true

    [tool.pylint.'MESSAGES CONTROL']

    # Enable the message, report, category or checker with the given id(s). You can
    # either give multiple identifier separated by comma (,) or put this option
    # multiple time (only on the command line, not in the configuration file where
    # it should appear only once). See also the "--disable" option for examples.
    enable = [
        'spelling',
        'useless-suppression',
    ]

    # Disable the message, report, category or checker with the given id(s). You
    # can either give multiple identifiers separated by comma (,) or put this
    # option multiple times (only on the command line, not in the configuration
    # file where it should appear only once).You can also use "--disable=all" to
    # disable everything first and then reenable specific checks. For example, if
    # you want to run only the similarities checker, you can use "--disable=all
    # --enable=similarities". If you want to run only the classes checker, but have
    # no Warning level messages displayed, use"--disable=all --enable=classes
    # --disable=W"

    disable = [
        # Style issues that we can deal with ourselves
        'too-few-public-methods',
        'too-many-ancestors',
        'too-many-locals',
        'too-many-arguments',
        'too-many-instance-attributes',
        'too-many-return-statements',
        'too-many-lines',
        'too-many-statements',
        'locally-disabled',
        # Let flake8 handle long lines
        'line-too-long',
        # Let flake8 handle unused imports
        'unused-import',
        # Let isort deal with sorting
        'ungrouped-imports',
        # We don't need everything to be documented because of mypy
        'missing-type-doc',
        'missing-return-type-doc',
        # Too difficult to please
        'duplicate-code',
        # Let isort handle imports
        'wrong-import-order',
    ]

    [tool.pylint.'FORMAT']

    # Allow the body of an if to be on the same line as the test if there is no
    # else.
    single-line-if-stmt = false

    [tool.pylint.'SPELLING']

    # Spelling dictionary name. Available dictionaries: none. To make it working
    # install python-enchant package.
    spelling-dict = 'en_US'

    # A path to a file that contains private dictionary; one word per line.
    spelling-private-dict-file = 'spelling_private_dict.txt'

    # Tells whether to store unknown words to indicated private dictionary in
    # --spelling-private-dict-file option instead of raising a message.
    spelling-store-unknown-words = 'no'

[tool.black]

line-length = 79

[tool.coverage.run]

branch = true

[tool.coverage.report]

exclude_lines =  [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]

xfail_strict = true
log_cli = true
addopts = ["--strict-markers"]
markers = ["requires_docker_build"]

[tool.check-manifest]

ignore = [
  "*.enc",
  "readthedocs.yaml",
  "CHANGELOG.rst",
  "CODE_OF_CONDUCT.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "ci",
  "ci/**",
  "codecov.yaml",
  "doc8.ini",
  "docs",
  "docs/**",
  ".git_archival.txt",
  "spelling_private_dict.txt",
  "tests",
  "tests/**",
  "vuforia_secrets.env.example",
  "lint.mk",
  "src/mock_vws/_flask_server/dockerfiles/*/Dockerfile",
  "secrets.tar.gpg",
]

[tool.mypy]

strict = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[[tool.mypy.overrides]]

module = [
    "brisque",
    "cv2",
    "docker",
    "docker.errors",
    "docker.models.containers",
    "docker.models.networks",
    "multipart",
    "sybil",
    "sybil.parsers.rest",
]

ignore_missing_imports = true

# This is ignored until we can bump doc8.
[tool.doc8]

max_line_length = 2000
ignore_path = [
    "./.eggs",
    "./docs/build",
    "./docs/build/spelling/output.txt",
    "./node_modules",
    "./src/*.egg-info/",
    "./src/*/_setuptools_scm_version.txt",
]

[tool.setuptools_scm]

# We use a fallback version like
# https://github.com/pypa/setuptools_scm/issues/77 so that we do not
# error in the Docker build stage of the release pipeline.
#
# This must be a PEP 440 compliant version.
fallback_version = "0.0.0"

[build-system]
requires = [
     "pip",
     "setuptools",
     "setuptools-scm-git-archive==1.4",
     "setuptools_scm[toml]==7.1.0",
     "wheel",
 ]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["ALL"]

ignore = [
    # We do not annotate the type of 'self', or 'cls'.
    "ANN101",
    "ANN102",
    # Allow our chosen docstring line-style - no one-line summary.
    "D200",
    "D203",
    "D205",
    "D212",
    "D213",
    "D400",
    "D415",
    # It is too much work to make every docstring imperative.
    "D401",
    # We ignore some docstyle errors which do not apply to Google style
    # docstrings.
    "D406",
    "D407",
    # We have an existing interface to support and so we do not want to change
    # exception names.
    "N818",
    # Ignore "too-many-*" errors as they seem to get in the way more than
    # helping.
    "PLR0913",
    "PLR0915",
    # Allow 'assert' in tests as it is the standard for pytest.
    # Also, allow 'assert' in other code as it is the standard for Python type hint
    # narrowing - see
    # https://mypy.readthedocs.io/en/stable/type_narrowing.html#type-narrowing-expressions.
    "S101",
    # Allow `random` as we are not implementing something which needs cryptographic safety.
    "S311",
]

# Do not automatically remove commented out code.
# We comment out code during development, and with VSCode auto-save, this code
# is sometimes annoyingly removed.
unfixable = ["ERA001"]

line-length = 79
target-version = "py311"

[tool.ruff.per-file-ignores]
"tests/**" = [
    # Allow possible hardcoded passwords in tests.
    "S105",
    "S106",
]

[tool.distutils.bdist_wheel]
universal = true

[project]
authors = [ { name = "Adam Dangoor", email = "adamdangoor@gmail.com"} ]
classifiers = [
    "Operating System :: POSIX",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: Pytest",
]
description = "A mock for the Vuforia Web Services (VWS) API."
dynamic = ["version"]
keywords = ["vuforia", "vws", "mock", "fake", "client"]
license = { file = "LICENSE" }
name = "vws-python-mock"
readme = { file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.10"
dependencies = [
    "ImageHash",
    "Pillow",
    "brisque",
    "flask",
    "multipart",
    "numpy",
    "opencv-python",
    "pydantic",
    "requests",
    "requests-mock",
    "tzdata; sys_platform == 'win32'",
    "vws-auth-tools",
]

[project.optional-dependencies]
dev = [
    "PyYAML==6.0",
    "Sphinx-Substitution-Extensions==2022.2.16",
    "Sphinx==7.0.1",
    "VWS-Test-Fixtures==2023.3.5",
    "black==23.3.0",
    "check-manifest==0.49",
    "dirty-equals==0.6.0",
    # We pin to an old doc8 to avoid version conflicts with sphinx_toolbox.
    # When we bump this, we can remove doc8.ini.
    "doc8==0.11.2",
    "docker==6.1.2",
    "dodgy==0.2.1",
    "enum-tools[sphinx]==0.9.0.post1",
    "freezegun==1.2.2",
    "furo==2023.5.20",
    "mypy==1.3.0",
    "pdm==2.6.1",
    "pip_check_reqs==2.4.4",
    "pydocstyle==6.3.0",
    "pyenchant==3.2.2",
    "pylint==2.17.4",
    "pyright==1.1.309",
    "pyroma==4.2",
    "pytest-cov==4.0.0",
    "pytest==7.3.1",
    "requests-mock-flask==2023.5.14",
    "ruff==0.0.269",
    "sphinx-autodoc-typehints==1.23.0",
    "sphinx-prompt==1.5.0",
    "sphinx_paramlinks==0.5.4",
    "sphinxcontrib-httpdomain==1.8.1",
    "sphinxcontrib-spelling==8.0.0",
    "sphinx-toolbox==3.4.0",
    "sybil==5.0.2",
    "types-PyYAML==6.0.12.9",
    "types-Pillow==9.5.0.4",
    "types-requests==2.30.0.0",
    # We need urllib3 < 2.0.0 for pdm to work.
    # After we can bump urllib3, we can remove types-urllib.
    "types-urllib3==1.26.25.13",
    "urllib3<2.0.0",
    "vulture==2.7",
    "vws-python==2023.3.25",
]

[project.urls]
Source = "https://github.com/VWS-Python/vws-python-mock"
Documentation = "https://vws-python-mock.readthedocs.io"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mock_vws = ["py.typed"]

[tool.pyright]
