[flake8]
exclude=./.eggs,
        ./build/,

[pydocstyle]
# No summary lines
#   - D200
#   - D205
#   - D400
#   - D415
# We don't want blank lines before class docstrings
#   - D203
# We don't need docstrings to start at the first line
#   - D212
# Allow blank lines after function docstrings
#   - D202
# We don't care about the imperative mood
# 	- D401
# Section names do not need to end in newlines
#	- D406
# Section names do not need dashed underlines
# 	- D407
# No blank line is needed after the last section
ignore = D200,D202,D203,D205,D212,D400,D401,D406,D407,D413,D415

[doc8]
max-line-length = 2000
ignore-path = ./src/*.egg-info/SOURCES.txt,./docs/build,./.eggs,./src/*/_setuptools_scm_version.txt

[metadata]
name = VWS Python Mock
description = A mock for the Vuforia Web Services (VWS) API.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = vuforia mock fake client
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://vws-python-mock.readthedocs.io
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
mock_vws =
    py.typed
