[flake8]
exclude=./.eggs,
        ./build/,

[metadata]
name = VWS Python Mock
description = A mock for the Vuforia Web Services (VWS) API.
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = vuforia mock fake client
license = MIT License
license_file = LICENSE
classifiers =
    Operating System :: POSIX
    Environment :: Web Environment
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
url = https://vws-python-mock.readthedocs.io
author = Adam Dangoor
author_email = adamdangoor@gmail.com

[options]
zip_safe = False
include_package_data = True
# Avoid dependency links because they are not supported by Read The Docs.
#
# Also, they require users to use ``--process-dependency-links``.
dependency_links =
package_dir=
    =src
packages=find:

[options.packages.find]
where=src

[options.package_data]
mock_vws =
    py.typed
